<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/Linear_marginBottom"
        android:background="@color/black"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/Linear_marginBottom"
            android:freezesText="true"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/neon_green"
            android:textSize="@dimen/TextView1_text_size"
            android:textStyle="italic|bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:paddingBottom="@dimen/textView1_paddingBottom"
            android:text="@string/TextView_Location"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/neon_green"
            android:textSize="@dimen/textView_textSize"
            android:textStyle="italic|bold" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Hint"
            android:inputType="text"
            android:textColorHint="@color/neon_green" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_map_height"
            android:contentDescription="@null"
            android:src="@drawable/reef_map" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_space"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/neon_green"
            android:textSize="@dimen/textView_textSize"
            android:textStyle="italic|bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton1True"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton1True"
                android:textColor="@color/neon_green"
                android:textSize="@dimen/radio_button_text_size"
                android:textStyle="italic|bold"
                android:checked="false"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton2false"
                android:textColor="@color/neon_green"
                android:textSize="@dimen/radio_button_text_size"
                android:textStyle="bold"
                android:checked="false"/>

        </RadioGroup>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_space_height"
            android:contentDescription="@null"
            android:src="@drawable/outer_space" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextView_primary_threat"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/neon_green"
            android:textSize="@dimen/textView_textSize"
            android:textStyle="italic|bold" />

        <CheckBox
            android:id="@+id/climate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/climate_change"
            android:textColor="@color/neon_green"
            android:textSize="@dimen/checkbox_text_size"
            android:textStyle="bold" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pollution"
            android:textColor="@color/neon_green"
            android:textSize="@dimen/checkbox_text_size"
            android:textStyle="bold" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBottom"
            android:text="@string/fishing"
            android:textColor="@color/neon_green"
            android:textSize="@dimen/checkbox_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_climate_height"
            android:contentDescription="@null"
            android:paddingBottom="@dimen/image_padding_bottom"
            android:src="@drawable/climate2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/Linear_marginTop"
                android:text="@string/TextView_Reef_size"
                android:textAlignment="center"
                android:textColor="@color/neon_green"
                android:textSize="@dimen/textView_textSize"
                android:textStyle="italic|bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/RGbutton3true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/RGbutton3True"
                    android:textColor="@color/neon_green"
                    android:textSize="@dimen/radio_button_text_size"
                    android:checked="false"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/RGbutton4False"
                    android:textColor="@color/neon_green"
                    android:textSize="@dimen/radio_button_text_size"
                    android:checked="false"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/image_wildlife_height"
                    android:contentDescription="@null"
                    android:src="@drawable/reef_wildlife" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/Linear_marginTop"
                    android:text="@string/seven_wonders"
                    android:textAlignment="center"
                    android:textColor="@color/neon_green"
                    android:textSize="@dimen/textView_textSize"
                    android:textStyle="italic|bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/RGbutton5true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/RButton5True"
                        android:textColor="@color/neon_green"
                        android:textSize="@dimen/radio_button_text_size"
                        android:textStyle="italic|bold"
                        android:checked="false"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/RButton5False"
                        android:textColor="@color/neon_green"
                        android:textSize="@dimen/radio_button_text_size"
                        android:textStyle="bold"
                        android:checked="false"/>

                </RadioGroup>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_gbreef_height"
                    android:contentDescription="@null"
                    android:src="@drawable/gbreef" />

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/Button_marginEnd"
                    android:layout_marginStart="@dimen/button3_margin_start"
                    android:background="@android:color/transparent"
                    android:onClick="submitButton"
                    android:paddingBottom="@dimen/buttonPaddingBottom"
                    android:text="@string/button3_submit"
                    android:textColor="@color/neon_green"
                    android:textSize="@dimen/button1_text_size"
                    android:textStyle="italic|bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/Linear_marginTop"
                    android:layout_marginBottom="@dimen/marginBottom"
                    android:text="@string/learn_to_help"
                    android:textAlignment="center"
                    android:textColor="@color/neon_green"
                    android:textSize="@dimen/textView_textSize"
                    android:textStyle="italic|bold"
                    android:autoLink="web"
                    android:textColorLink="@color/neon_green"/>

            </RadioGroup>
        </LinearLayout>

    </LinearLayout>
</ScrollView>

